Fix button appearance on iOS

--- a/public/app.css
+++ b/public/app.css
@@ -58,6 +58,7 @@ input[type=submit], .connect {
   font-size: 1em;
   padding: .8em 1.625em;
   text-decoration: none;
+  -webkit-appearance: none;
 }
 
 input[type=submit]:hover, .connect:hover {
